update purchase by station

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 body {
   font-family: 'Inter', sans-serif;
+  color: var(--sucafina-text-color) !important;
 }
 
 
@@ -27,6 +28,7 @@ body {
   --light-gray: #f8f9fa;
   --border-color: #dee2e6;
   --sucafina-color: #008080;
+  --sucafina-text-color: #4C585B;
 }
 
 
