changes on test account

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ body {
   }
 }
 
+@keyframes blinking {
+  0% { opacity: 1; }
+  50% { opacity: 0.3; }
+  100% { opacity: 1; }
+}
+
 
 
 /* Global variables */
