--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 body {
   font-family: 'Inter', sans-serif;
   color: var(--sucafina-text-color) !important;
@@ -19,11 +20,19 @@ body {
   }
 }
 
-  @keyframes blinking {
-    0% { opacity: 1; }
-    50% { opacity: 0.3; }
-    100% { opacity: 1; }
+@keyframes blinking {
+  0% {
+    opacity: 1;
   }
+
+  50% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
 
 
 
@@ -40,13 +49,20 @@ body {
 }
 
 
-.bg-primary{
+.batch-selection-modal {
+  max-height: 60vh !important;
+  overflow-y: auto !important;
+}
+
+
+.bg-primary {
   background-color: var(--sucafina-color) !important;
 }
+
 /* For the switch itself */
 .custom-switch .form-check-input:checked {
   background-color: var(--sucafina-color);
-  border-color:var(--sucafina-color);
+  border-color: var(--sucafina-color);
   /* height: 1rem !important;
   width: 3rem !important; */
 }
@@ -54,7 +70,7 @@ body {
 /* Optional: style the switch when being toggled/focused */
 .custom-switch .form-check-input:focus {
   border-color: var(--sucafina-color);
-  box-shadow: 0 0 0 0.25rem rgba(0,128,128, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(0, 128, 128, 0.25);
   /* height: 1rem !important;
   width: 3rem !important; */
   padding-left: 5px;
@@ -143,47 +159,56 @@ body {
   color: white;
 }
 
-.bg-sucafina{
-  background-color: var(--sucafina-color) !important;
-  color: white !important;
-}
-.btn-sucafina{
+.bg-sucafina {
   background-color: var(--sucafina-color) !important;
   color: white !important;
 }
 
-.text-sucafina{
+.btn-sucafina {
+  background-color: var(--sucafina-color) !important;
+  color: white !important;
+}
+
+.text-sucafina {
   color: var(--sucafina-color) !important;
 }
-.btn-outline-sucafina{
+
+.btn-outline-sucafina {
   background-color: transparent !important;
   color: var(--sucafina-color) !important;
   border: 1px solid var(--sucafina-color) !important;
 }
 
-.btn-outline-sucafina:hover{
+.btn-outline-sucafina:hover {
   background-color: var(--sucafina-color) !important;
   color: white !important;
 }
 
 
 /* CustomPills.css */
-.nav-pills{
+.nav-pills {
   background-color: whitesmoke !important;
 }
-.nav-pills:hover{
+
+.nav-pills:hover {
   background-color: whitesmoke !important;
   color: #4FB3B3;
 }
+
 .nav-pills .nav-link {
-  color: #008080; /* Text color */
-  border: 1px solid transparent; /* Optional: Add border */
-  background-color: transparent; /* Background color */
+  color: #008080;
+  /* Text color */
+  border: 1px solid transparent;
+  /* Optional: Add border */
+  background-color: transparent;
+  /* Background color */
 }
 
 .nav-pills .nav-link.active {
-  background-color:white  !important; /* Active tab background */
-  color: #008080 !important; /* Active tab text color */
+  background-color: white !important;
+  /* Active tab background */
+  color: #008080 !important;
+  /* Active tab text color */
 }
 
 
